@@ -26,8 +26,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
-//#include <sys/resource.h>
-//#include <unistd.h>
+#include <unistd.h>
 
 #include "config.h"
 #include "report.h"
